[package]
name = "linug-raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.131.0"
image = "0.24.7"
cgmath = "0.18.0"
lazy_static = "1.4.0"
fps_counter = "2.0.0"
rand = "0.8.5"